cmake_minimum_required(VERSION 4.1)
project(Course5)

set(CMAKE_CXX_STANDARD 20)

# --- Problems Folder ---
add_executable(MultiplicationTable Problems/MultiplicationTable.cpp)
add_executable(printPrimeFrom1ToN Problems/printPrimeFrom1ToN.cpp)
add_executable(PerfectNumber Problems/printPerfectNumber.cpp)
add_executable(perfectFrom1ToN Problems/printPerfectFrom1toN.cpp)
add_executable(reverseNumber Problems/reverseNumber.cpp)
add_executable(sumOfdigits Problems/sumOfDigits.cpp)
add_executable(returnReversed Problems/returnReversedInteger.cpp)
add_executable(Lucky Problems/LuckyNums.cpp)
add_executable(digitFrequency Problems/digitFrequencyInANumber.cpp)
add_executable(allDigitFrequencies Problems/allDigitFrequencies.cpp)
add_executable(printDigitsInOrder Problems/printDigitsInOrder.cpp)
add_executable(PalindromeNumber Problems/isPalindromeNumber.cpp)
add_executable(Factorial_Like_Pattern Problems/printFactorialLikePattern.cpp)
add_executable(Problem14 Problems/Problem14.cpp)
add_executable(latterPattern Problems/LatterPattern.cpp)
add_executable(printAAAToZZZ Problems/PrintFromAAAToZZZ.cpp)
add_executable(passwordGuess Problems/passwordGuess.cpp)
add_executable(Encryption_Decryption Problems/encryptDecryptName.cpp)
add_executable(print_3_Randoms_from_1_to_10 Problems/print3RandomNumbersFrom1To10.cpp)
add_executable(random_digits Problems/randomDigits.cpp)
add_executable(Generate_Keys Problems/generateRandomKeys.cpp)
add_executable(Array Problems/Array.cpp)
add_executable(Fill_Array_With_Randoms Problems/FillArrayWithRandoms.cpp)
add_executable(Minimum_Number_In_Random_Array Problems/minOfRandomArray.cpp)
add_executable(Sum_Of_Randoms_In_Array Problems/SumOfRandomsOfArray.cpp)
add_executable(Average_Of_Random_Array Problems/Average_Of_Random_Array.cpp)
add_executable(Copy_Array Problems/CopyArray.cpp)
add_executable(Copy_Primes_From_Array Problems/CopyPrimesFromArray.cpp)
add_executable(Sum__OfArrays Problems/SumOf2Arrays.cpp)
add_executable(Shuffle_Array Problems/ShuffleOrderedArray.cpp)
add_executable(GPA_Calculator Problems/GPACalculator.cpp)
add_executable(Copy_Array_In_Reverse Problems/copyArrayInReverseOrder.cpp)
add_executable(Fill_Array_With_Keys Problems/fillArrayWithKeys.cpp)
add_executable(Search_Array_Of_Randoms Problems/searchArrayOfRandoms.cpp)
add_executable(Check_For_Number_In_Array Problems/CheckForNumberInArray.cpp)
add_executable(Simi_Dynamic_Array Problems/SimiDynamicArray.cpp)
add_executable(Copy_Array_Using_AddElement Problems/CopyArrayUsingAddElmentFunction.cpp)
add_executable(Copy_Odds_Using_AddElement Problems/copyOddsUsingAddArrayElementsFucntion.cpp)
add_executable(Copy_Primes_Using_AddElement Problems/copyPrimeNumbersUsingAddArrayElement.cpp)
add_executable(Copy_Distinct_Numbers_From_Array Problems/copyDistinctNumbersFromArray.cpp)
add_executable(Pilindrome_Array_Check Problems/IsArrayPilindrome.cpp)
add_executable(Count_Odds_In_Array Problems/CountOddsInArray.cpp)
add_executable(Count_Evens_In_Array Problems/CountEvensInArray.cpp)
add_executable(Count_Positives_In_Array Problems/CountPositivesInArray.cpp)
add_executable(My_Absolute_Function Problems/AbsoluteValueOfANumber.cpp)
add_executable(My_Round_Function Problems/MyRoundFunction.cpp)
add_executable(My_Floor_Function Problems/MyFloorFunction.cpp)
add_executable(My_Ceil_Function Problems/MyCeilFunction.cpp)
add_executable(My_Sqrt_Function Problems/MySquareRootFunction.cpp)

# --- Projects Folder ---
add_executable(ROCK_PAPER_SCISSORS_FINAL_PROJECT Projects/RockPaperScissorsFinalProject.cpp)
add_executable(REWRITING_ROCK_PAPER_SCISSORS Projects/REWRITING_ROCK_PAPER_SCISSORS.cpp)
add_executable(MathChallenge Projects/MathChallangeProject.cpp)